[gd_scene load_steps=9 format=2]

[ext_resource path="res://car/car_controller.gd" type="Script" id=1]
[ext_resource path="res://car/models/wheel.obj" type="ArrayMesh" id=2]
[ext_resource path="res://car/models/base_short.obj" type="ArrayMesh" id=3]
[ext_resource path="res://car/models/assembly_camera_mount_manual.obj" type="ArrayMesh" id=4]
[ext_resource path="res://car/models/rod.obj" type="ArrayMesh" id=5]
[ext_resource path="res://car/mat_epoxyplate/mat_epoxyplate.tres" type="Material" id=6]
[ext_resource path="res://car/mat_rubber/mat_rubber.tres" type="Material" id=7]

[sub_resource type="BoxShape" id=1]
margin = 0.5
extents = Vector3( 0.47, 0.015, 1.483 )

[node name="Car" type="Spatial"]

[node name="VehicleBody" type="VehicleBody" parent="."]
mass = 0.233673
continuous_cd = true
can_sleep = false
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.015, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="VehicleBody"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -0.643, 0, 1.686 )
mesh = ExtResource( 3 )
material/0 = ExtResource( 6 )

[node name="Accessories" type="Spatial" parent="VehicleBody"]

[node name="RodMesh" type="MeshInstance" parent="VehicleBody/Accessories"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, -1.338 )
mesh = ExtResource( 5 )
material/0 = null

[node name="CameraMount" type="Spatial" parent="VehicleBody/Accessories"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.18151, -1.338 )

[node name="CameraHolderMesh" type="MeshInstance" parent="VehicleBody/Accessories/CameraMount"]
transform = Transform( -0.01, 3.25841e-09, 0, -3.25841e-09, -0.01, 0, 0, 0, 0.01, -0.012, 0, 0.32 )
mesh = ExtResource( 4 )
material/0 = null

[node name="Camera" type="Camera" parent="VehicleBody/Accessories/CameraMount"]
transform = Transform( -1, -2.49609e-07, 2.09447e-07, 0, 0.642787, 0.766044, -3.25841e-07, 0.766044, -0.642787, 0, -0.113761, 0.83322 )
fov = 85.0

[node name="CarWheelFR" type="VehicleWheel" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.95, 0.21, 1.093 )
engine_force = -10.0
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.001
wheel_radius = 0.325
wheel_rest_length = 0.1
wheel_friction_slip = 9.0
suspension_travel = 0.1
suspension_stiffness = 150.0
suspension_max_force = 2000.0

[node name="MeshInstance" type="MeshInstance" parent="VehicleBody/CarWheelFR"]
transform = Transform( -1.62921e-09, -0.01, 0, 0.01, -1.62921e-09, 0, 0, 0, 0.01, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 7 )

[node name="CarWheelFL" type="VehicleWheel" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.95, 0.21, 1.093 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.001
wheel_radius = 0.325
wheel_rest_length = 0.1
wheel_friction_slip = 9.0
suspension_travel = 0.1
suspension_stiffness = 150.0
suspension_max_force = 2000.0

[node name="MeshInstance" type="MeshInstance" parent="VehicleBody/CarWheelFL"]
transform = Transform( -1.62921e-09, 0.01, 0, -0.01, -1.62921e-09, 0, 0, 0, 0.01, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 7 )

[node name="CarWheelRL" type="VehicleWheel" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.95, 0.21, -0.922 )
engine_force = 1.0
use_as_traction = true
wheel_roll_influence = 0.001
wheel_radius = 0.325
wheel_rest_length = 0.1
wheel_friction_slip = 9.0
suspension_travel = 0.1
suspension_stiffness = 150.0
suspension_max_force = 2000.0

[node name="MeshInstance" type="MeshInstance" parent="VehicleBody/CarWheelRL"]
transform = Transform( -1.62921e-09, 0.01, 0, -0.01, -1.62921e-09, 0, 0, 0, 0.01, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 7 )

[node name="CarWheelRR" type="VehicleWheel" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.95, 0.21, -0.922 )
engine_force = 1.0
use_as_traction = true
wheel_roll_influence = 0.001
wheel_radius = 0.325
wheel_rest_length = 0.1
wheel_friction_slip = 9.0
suspension_travel = 0.1
suspension_stiffness = 150.0
suspension_max_force = 2000.0

[node name="MeshInstance" type="MeshInstance" parent="VehicleBody/CarWheelRR"]
transform = Transform( -1.62921e-09, -0.01, 0, 0.01, -1.62921e-09, 0, 0, 0, 0.01, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 7 )
